ADD : new pipex finished, wip bonus, old pipex in /old

--- a/old/Makefile
+++ b/old/Makefile
@@ -6,31 +6,21 @@
 #    By: tlegrand <tlegrand@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/03 11:42:37 by tlegrand          #+#    #+#              #
-#    Updated: 2023/02/11 22:25:57 by tlegrand         ###   ########.fr        #
+#    Updated: 2023/02/07 12:15:17 by tlegrand         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		=	pipex
-NAME_B		=	pipex_bonus
 
 DIR_OBJS	=	.objs/
 
-SRCS		= 	pipex.c ft_parsing.c ft_cmd_exe.c ft_get_argv.c ft_get_io.c ft_get_path.c \
-				ft_utils.c  ft_clean.c
+SRCS		= 	pipex.c utils.c format.c ft_cat_fd.c ft_here_doc.c
 LIST_OBJS	=	${SRCS:.c=.o}
 OBJS		=	${addprefix ${DIR_OBJS}, ${LIST_OBJS}}
 
-SRCS_B		=	pipex_bonus.c ft_parsing.c ft_cmd_exe.c ft_get_argv.c ft_get_io.c ft_get_path.c \
-				ft_utils.c  ft_clean.c \
-				ft_here_doc.c
-LIST_OBJS_B	=	${SRCS_B:.c=.o}
-OBJS_B		=	${addprefix ${DIR_OBJS}, ${LIST_OBJS_B}}
+HEADER		=	pipex.h \
 
-HEADER		=	pipex.h
-
-HEADER_B		=	pipex_bonus.h
-
-LIB			=	libft/libft.a
+LIB			=	libft/libft.a\
 
 FLAGS		=	-Wall -Wextra -Werror -I .
 
@@ -42,16 +32,14 @@ all		:	lib ${NAME}
 ${NAME}	:	${OBJS}
 		${CC} ${FLAGS} -o ${NAME} ${OBJS} ${LIB}
 
-bonus	:	${OBJS_B}
-		${CC} ${FLAGS} -o ${NAME_B} ${OBJS_B} ${LIB}
 
 nn	:
-	norminette ${SRCS} {SRCS_B} ${HEADER} ${HEADER_B}
+	norminette ${SRCS} ${HEADER}
 
 lib	:
 	${MAKE} -C libft
 
-${DIR_OBJS}%.o	:	%.c ${HEADER} ${HEADER_B} 
+${DIR_OBJS}%.o	:	%.c ${HEADER} 
 				@mkdir -p ${DIR_OBJS}
 				${CC} ${FLAGS} -c $< -o $@
 
@@ -60,7 +48,7 @@ clean	:
 		make -C libft clean
 
 fclean	:	clean
-		${RM} ${NAME} ${NAME_B}
+		${RM} ${NAME}
 		make -C libft fclean
 
 re	:	fclean
