--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.ber linguist-language=sprites
-*.xpm linguist-language=sprites
+*.ber linguist-vendored
+*.xpm linguist-vendored
 minilibx-linux linguist-vendored
