--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"files.associations": {
-		"ft_printf.h": "c"
+		"ft_printf.h": "c",
+		"array": "c",
+		"string_view": "c",
+		"initializer_list": "c"
 	}
 }
