--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,16 @@
 		"variant": "cpp",
 		"vector": "cpp",
 		"algorithm": "cpp",
-		"iomanip": "cpp"
+		"iomanip": "cpp",
+		"bit": "cpp",
+		"*.tcc": "cpp",
+		"deque": "cpp",
+		"functional": "cpp",
+		"iterator": "cpp",
+		"memory_resource": "cpp",
+		"numeric": "cpp",
+		"random": "cpp",
+		"utility": "cpp",
+		"numbers": "cpp"
 	}
 }
