--- a/M01/ex00/Makefile
+++ b/M01/ex00/Makefile
@@ -6,24 +6,23 @@
 #    By: tlegrand <tlegrand@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/15 11:48:58 by tlegrand          #+#    #+#              #
-#    Updated: 2023/08/19 16:39:12 by tlegrand         ###   ########.fr        #
+#    Updated: 2023/08/19 17:01:00 by tlegrand         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	bank
+NAME	=	zombie
 
 
-HDR		=	Account.hpp
+HDR		=	Zombie.hpp
 
-SRC		=	Account.cpp tests.cpp
+SRC		=	main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
 
 OBJ_DIR	=	.obj/
 OBJ_LST	=	${SRC:.cpp=.o}
 OBJ		=	$(addprefix $(OBJ_DIR), $(OBJ_LST))
 
-
 CC		=	c++
-RM		=	rm -rf
+rm		=	rm -rf
 
 CFLAG	=	-Wall -Werror -Wextra -std=c++98
 
@@ -50,6 +49,6 @@ ${NAME}	:	$(OBJ_DIR) ${OBJ}
 $(OBJ_DIR)%.o	:	%.cpp $(HDR)
 		@printf "$(YELLOW)Making $@...\n$(END)"
 		@${CC} ${CFLAGS} -c $< -o $@
-		
+
 $(OBJ_DIR)	:
 			@mkdir -p $(OBJ_DIR)
