--- a/M00/ex01/Makefile
+++ b/M00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: tlegrand <tlegrand@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/15 11:48:58 by tlegrand          #+#    #+#              #
-#    Updated: 2023/09/11 21:53:25 by tlegrand         ###   ########.fr        #
+#    Updated: 2023/09/13 22:02:19 by tlegrand         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ OBJ_LST	=	${SRC:.cpp=.o}
 OBJ		=	$(addprefix $(OBJ_DIR), $(OBJ_LST))
 
 CC		=	c++
-rm		=	rm -f
+RM		=	rm -rf
 
 CFLAG	=	-Wall -Werror -Wextra -std=c++98
 
@@ -33,7 +33,7 @@ CFLAG	=	-Wall -Werror -Wextra -std=c++98
 all 	:	${NAME}
 
 clean	:
-		@$(RM) ${OBJ}
+		@$(RM) ${OBJ_DIR}
 
 fclean	:	clean
 		@$(RM) ${NAME}
