--- a/M00/ex01/Makefile
+++ b/M00/ex01/Makefile
@@ -6,12 +6,11 @@
 #    By: tlegrand <tlegrand@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/15 11:48:58 by tlegrand          #+#    #+#              #
-#    Updated: 2023/09/13 22:02:19 by tlegrand         ###   ########.fr        #
+#    Updated: 2023/09/18 10:40:23 by tlegrand         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	=	repertory
-
 
 HDR		=	PhoneBook.hpp Contact.hpp
 
@@ -24,7 +23,7 @@ OBJ		=	$(addprefix $(OBJ_DIR), $(OBJ_LST))
 CC		=	c++
 RM		=	rm -rf
 
-CFLAG	=	-Wall -Werror -Wextra -std=c++98
+CFLAGS	=	-Wall -Werror -Wextra -std=c++98
 
 
 
@@ -33,22 +32,19 @@ CFLAG	=	-Wall -Werror -Wextra -std=c++98
 all 	:	${NAME}
 
 clean	:
-		@$(RM) ${OBJ_DIR}
+		$(RM) ${OBJ_DIR}
 
 fclean	:	clean
-		@$(RM) ${NAME}
-		@printf "$(GREEN)All clean !\n$(END)"
+		$(RM) ${NAME}
 
 re		:	fclean all
 		
 
 ${NAME}	:	$(OBJ_DIR) ${OBJ} 
-		@$(CC) ${CFLAGS} $(OBJ) -o $@
-		@printf "$(GREEN_LIGHT)$@ created !\n$(END)"
+		$(CC) ${CFLAGS} $(OBJ) -o $@
 
 $(OBJ_DIR)%.o	:	%.cpp $(HDR)
-		@printf "$(YELLOW)Making $@...\n$(END)"
-		@${CC} ${CFLAGS} -c $< -o $@
+		${CC} ${CFLAGS} -c $< -o $@
 
 $(OBJ_DIR)	:
 			@mkdir -p $(OBJ_DIR)
