--- a/srcs/requirement/nginx/Dockerfile
+++ b/srcs/requirement/nginx/Dockerfile
@@ -1,6 +1,7 @@
-FROM alpine:3.18
-RUN apk update && apk upgrade && apk add nginx
-COPY ./nginx.conf /etc/nginx/conf.d/nginx.conf.conf
+FROM debian:12
+RUN apt update -y && apt upgrade -y && apt install -y openssl nginx
+COPY ./conf/nginx.conf /etc/nginx/nginx.conf
+COPY ./conf/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 443
 
