--- a/srcs/requirement/nginx/conf/localhost.conf
+++ b/srcs/requirement/nginx/conf/localhost.conf
@@ -1,9 +1,13 @@
+#server block for tlegrand.42.fr
+
 server {
-    listen       443;
-    listen  [::]:443;
-    server_name  localhost;
+    listen       443 ssl;
+    listen  [::]:443 ssl;
+    server_name  tlegrand.42.fr www.tlegrand.42.fr;
 
 	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_certificate     /etc/ssl/tlegrand.fr.cert;
+    ssl_certificate_key /etc/ssl/tlegrand.fr.key;
 	ssl_prefer_server_ciphers on;
 
     #access_log  /var/log/nginx/host.access.log  main;
