--- a/srcs/requirement/nginx/conf/localhost.conf
+++ b/srcs/requirement/nginx/conf/localhost.conf
@@ -6,8 +6,8 @@ server {
     server_name  tlegrand.42.fr www.tlegrand.42.fr;
 
 	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_certificate     /etc/ssl/tlegrand.fr.cert;
-    ssl_certificate_key /etc/ssl/tlegrand.fr.key;
+	ssl_certificate     /etc/ssl/tlegrand.42.fr.cert;
+    ssl_certificate_key /etc/ssl/tlegrand.42.fr.key;
 	ssl_prefer_server_ciphers on;
 
     #access_log  /var/log/nginx/host.access.log  main;
