--- a/srcs/requirements/nginx/conf/tlegrand.42.fr.conf
+++ b/srcs/requirements/nginx/conf/tlegrand.42.fr.conf
@@ -12,9 +12,11 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+	root   /var/www/html;
+	
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.html index.htm index.nginx-debian.html;
+		try_files $uri $uri/ = 404;
     }
 
     #error_page  404              /404.html;
@@ -23,6 +25,11 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+
+	# location ~ \.php$ {
+	# 	include snippets/fastcgi-php.conf;
+	# 	fastcgi_pass wordpress:9000;
+    # }
 
 }
 
