ADD : db dockerfile +fix

--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -4,14 +4,16 @@ services:
 
   db:
     container_name: mariadb
-    image: mariadb:latest
-    # args:
-    #   DB_DATABASE: wordpress
-    #   DB_USER: wordpress
-    #   DB_USER_PASSWORD: wordpress
-    #   DB_ROOT_PASSWORD: wordpress
+    build:
+      context: requirements/mariadb
+      args:
+        DB_NAME: ${DB_NAME}
+        DB_USER: ${DB_USER}
+        DB_USER_PASSWORD: ${DB_USER_PASSWORD}
+        DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
     env_file:
       - .env
+    image: my_mariadb
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
@@ -20,13 +22,17 @@ services:
 
   wordpress:
     container_name: wordpress
+    build:
+      context: requirements/wordpress
+      args: 
+        PHP_VERSION: ${PHP_VERSION}
     depends_on:
       - db
-    image: wordpress:latest
     env_file:
       - .env
+    image: my_wordpress
     volumes:
-      - wordpress_data::/var/www/html/wordpress
+      - wordpress_data:/var/www/html/wordpress
     networks:
       - inception
     restart: always
@@ -37,11 +43,11 @@ services:
       - wordpress
     build:
       context: requirements/nginx
-    image: mynginx
+    image: my_nginx
     ports:
       - 443:443
     volumes:
-      - wordpress_data::/var/www/html/wordpress
+      - wordpress_data:/var/www/html/wordpress
     networks:
       - inception
     restart: always
