--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,34 +1,33 @@
-# /etc/nginx/nginx.conf
-# my conf file
+#server block for tlegrand.42.fr
 
-user  nginx;
-worker_processes  auto;
+server {
+	#listen directives
+    listen       443 ssl default_server;
+    listen  [::]:443 ssl default_server;
+    server_name  localhost;
+	# tlegrand.42.fr www.tlegrand.42.fr;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+	#ssl directives
+	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_certificate     /etc/ssl/tlegrand.42.fr.cert;
+    ssl_certificate_key /etc/ssl/tlegrand.42.fr.key;
+	ssl_prefer_server_ciphers on;
 
+    #locations
+	root   /var/www/html/wordpress;
+	index  index.php index.html index.htm index.nginx-debian.html;
+	
+    location / {
+		try_files $uri $uri/ = 404;
+    }
 
-events {
-    worker_connections  1024;
-}
+	location ~ \.php$ {
+		include snippets/fastcgi-php.conf;
+		fastcgi_pass wordpress:9000;
+    }
 
+ 	location ~ /\.ht {
+		deny all;
+    }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    include /etc/nginx/conf.d/*.conf;
 }
