--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,13 +5,14 @@ server {
     listen       443 ssl default_server;
     listen  [::]:443 ssl default_server;
     server_name  localhost;
-	# tlegrand.42.fr www.tlegrand.42.fr;
+	# tlegrand.42.fr www.tlegrand.42.fr 
 
 	#ssl directives
+	ssl on;
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate     /etc/ssl/tlegrand.42.fr.cert;
     ssl_certificate_key /etc/ssl/tlegrand.42.fr.key;
-	ssl_prefer_server_ciphers on;
+# ssl_prefer_server_ciphers on;
 
     #locations
 	root   /var/www/html/wordpress;
@@ -29,5 +30,4 @@ server {
  	location ~ /\.ht {
 		deny all;
     }
-
 }
