--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,7 +12,7 @@ server {
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate     /etc/ssl/tlegrand.42.fr.cert;
     ssl_certificate_key /etc/ssl/tlegrand.42.fr.key;
-# ssl_prefer_server_ciphers on;
+	ssl_prefer_server_ciphers on;
 
     #locations
 	root   /var/www/html/wordpress;
