--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -14,7 +14,7 @@ server {
 	ssl_prefer_server_ciphers on;
 
     #locations
-	root   /var/www/html/wordpress;
+	root   /var/www/html/;
 	index  index.php index.html index.htm index.nginx-debian.html;
 	
     location / {
@@ -23,10 +23,6 @@ server {
 
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
-		fastcgi_pass wordpress:9000;
-    }
-
- 	location ~ /\.ht {
-		deny all;
+		fastcgi_pass 0.0.0.0:9000;
     }
 }
