--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -1,9 +1,10 @@
-version: '3'
+version: '3.7'
 
 services:
 
   db:
     container_name: mariadb
+    init: true
     build:
       context: requirements/mariadb
       args:
@@ -22,6 +23,7 @@ services:
 
   wordpress:
     container_name: wordpress
+    init: true
     build:
       context: requirements/wordpress
       args: 
@@ -39,6 +41,7 @@ services:
 
   nginx:
     container_name: nginx
+    init: true
     depends_on:
       - wordpress
     build:
@@ -58,14 +61,14 @@ volumes:
     name: mariadb_data
     driver_opts:
       type: none
-      device: /home/tlegrand/data/mariadb
+      device: /home/${USER}/data/mariadb
       o: bind
   wordpress_data:
     driver: local
     name: wordpress_data
     driver_opts:
       type: none
-      device: /home/tlegrand/data/wordpress
+      device: /home/${USER}/data/wordpress
       o: bind
 
 networks:
