--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -4,8 +4,7 @@ server {
 	#listen directives
     listen       443 ssl default_server;
     listen  [::]:443 ssl default_server;
-    server_name  localhost;
-	# tlegrand.42.fr www.tlegrand.42.fr 
+    server_name  localhost tlegrand.42.fr www.tlegrand.42.fr;
 
 	#ssl directives
 	ssl_protocols TLSv1.2 TLSv1.3;
@@ -14,7 +13,7 @@ server {
 	ssl_prefer_server_ciphers on;
 
     #locations
-	root   /var/www/html/;
+	root   /var/www/html/wordpress;
 	index  index.php index.html index.htm index.nginx-debian.html;
 	
     location / {
@@ -23,6 +22,6 @@ server {
 
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
-		fastcgi_pass 0.0.0.0:9000;
+		fastcgi_pass wordpress:9000;
     }
 }
