--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian:11
-RUN apt update -y && apt upgrade -y && apt install -y openssl nginx 
+RUN apt update -y -q && apt upgrade -y -q && apt install -y -q openssl nginx 
 RUN openssl req -x509 -newkey rsa:2048 -nodes \
 	-keyout /etc/ssl/tlegrand.42.fr.key \
 	-out /etc/ssl/tlegrand.42.fr.cert \
