FIx : wp entrypoint them not found

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -4,7 +4,7 @@ server {
 	#listen directives
     listen       443 ssl default_server;
     listen  [::]:443 ssl default_server;
-    server_name  localhost tlegrand.42.fr www.tlegrand.42.fr;
+    server_name  tlegrand.42.fr www.tlegrand.42.fr;
 
 	#ssl directives
 	ssl_protocols TLSv1.2 TLSv1.3;
