--- a/srcs/requirements/vsftp/conf/ftp.conf
+++ b/srcs/requirements/vsftp/conf/ftp.conf
@@ -28,7 +28,7 @@ local_root=/var/www/
 chroot_local_user=YES
 
 userlist_enable=YES
-userlist_file=/etc/vsftpd.user_list
+userlist_file=/etc/vsftpd.userlist
 userlist_deny=NO
 
 
