--- a/srcs/requirements/vsftp/conf/ftp.conf
+++ b/srcs/requirements/vsftp/conf/ftp.conf
@@ -4,7 +4,6 @@ anonymous_enable=YES
 anon_upload_enable=YES
 anon_root=/var/www/
 anon_umask=0022
-# chroot_anon_user=YES
 
 write_enable=YES
 dirmessage_enable=YES
@@ -27,9 +26,9 @@ local_enable=YES
 local_root=/var/www/
 chroot_local_user=YES
 
-userlist_enable=YES
-userlist_file=/etc/vsftpd.userlist
-userlist_deny=NO
+# userlist_enable=YES
+# userlist_file=/etc/vsftpd.userlist
+# userlist_deny=NO
 
 
 # ftp_username=nobody
