--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,11 +13,16 @@ server {
 	ssl_prefer_server_ciphers on;
 
     #locations
-	root   /var/www/html/wordpress;
+	root   /var/www/wordpress;
 	index  index.php index.html index.htm index.nginx-debian.html;
 	
     location / {
 		try_files $uri $uri/ = 404;
+    }
+
+	location /static {
+		root /srv;
+		index mainpage.html;
     }
 
 	location ~ \.php$ {
