--- a/srcs/requirements/redis/Dockerfile
+++ b/srcs/requirements/redis/Dockerfile
@@ -1,3 +1,11 @@
 FROM debian:11
 
-RUN apt-get update -y && apt-get upgrade -y && apt-get install -y --no-install-recommends redis
+RUN apt-get --quiet update -y \
+	&& apt-get --quiet upgrade -y \
+	&& apt-get --quiet install -y --no-install-recommends redis
+
+COPY conf/redis.conf /etc/redis/redis.conf
+
+EXPOSE 6379
+
+ENTRYPOINT ["redis-server", "--protected-mode", "no"]
