--- a/srcs/requirements/vsftp/Dockerfile
+++ b/srcs/requirements/vsftp/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:11
 
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt-get update -y --quiet && apt-get upgrade -y --quiet && apt-get install -y --quiet --no-install-recommends vsftpd
+RUN apt-get --quiet update -y  && apt-get --quiet upgrade -y  && apt-get --quiet install -y  --no-install-recommends vsftpd
 
 COPY conf/ftp.conf /etc/vsftpd.conf
 COPY conf/vsftpd.userlist /etc/vsftpd.userlist
